--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
     "typescript": "^4.5.4",
+    "unplugin-vue-components": "^0.19.2",
     "vite": "^2.9.0",
     "vue-tsc": "^0.29.8"
   }
