--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
+    "sass": "^1.50.0",
     "typescript": "^4.5.4",
     "unplugin-vue-components": "^0.19.2",
     "vite": "^2.9.0",
